[package]
name = "bitpanda-csv"
version = "0.1.1"
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
edition = "2021"
categories = ["parser-implementations", "parsing"]
description = "A Rust library to parse the Bitpanda trades exported as CSV from your trades history"
documentation = "https://docs.rs/bitpanda-csv"
homepage = "https://github.com/veeso/bitpanda-csv"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["bitpanda", "bitpanda-trades", "bitpanda-csv"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/bitpanda-csv"

[dependencies]
chrono = { version = "^0.4", features = [ "serde" ] }
csv = "^1.1"
log = "^0.4"
rust_decimal = "^1.26"
serde = { version = "^1.0", features = [ "derive" ] }
tempfile = "^3.3"

[dev-dependencies]
pretty_assertions = "^1.2.1"
rust_decimal_macros = "^1.26"
