[package]
name = "bitpanda-csv"
version = "0.2.1"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
categories = ["parser-implementations", "parsing"]
description = "A Rust library to parse the Bitpanda trades exported as CSV from your trades history"
documentation = "https://docs.rs/bitpanda-csv"
homepage = "https://github.com/veeso/bitpanda-csv"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["bitpanda", "bitpanda-trades", "bitpanda-csv"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/bitpanda-csv"

[dependencies]
chrono = { version = "^0.4", features = [ "serde" ] }
csv = { version = "^1.1", optional = true }
csv-async = { version = "^1.2", optional = true, features = [ "tokio" ] }
futures =  { version = "^0.3", optional = true }
log = "^0.4"
rust_decimal = "^1.26"
rust_decimal_macros = { version = "^1.26", optional = true }
serde = { version = "^1.0", features = [ "derive" ] }
tempfile = "^3.3"
tokio = { version = "1.28", optional = true, features = [ "io-std", "io-util" ], default-features = false }
uuid = { version = "^1.1", features = [ "v4" ], optional = true }

[dev-dependencies]
pretty_assertions = "^1.2.1"
rust_decimal_macros = "^1.26"
tokio = { version = "1.28", features = [ "full" ] }

[features]
default = [ "sync" ]
async = [ "csv-async", "futures", "tokio" ]
mock = [ "uuid", "rust_decimal_macros" ]
sync = [ "csv" ]
